fix collapse hiding bug

--- a/dshop/static/dshop/css/dmodules.css
+++ b/dshop/static/dshop/css/dmodules.css
@@ -1231,3 +1231,8 @@ main > .container > .row {
 .dmalign-start {
     align-items: flex-start;
 }
+
+/* ===--- Fixes ---=== */
+fieldset.module.collapse:not(.show) {
+    display: block;
+}
